--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
         "@testing-library/user-event": "^13.5.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "firebase": "^9.23.0",
         "prettier": "^2.8.8",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
